# pyspam

./: .coverage  .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  dashboard.py  feature_engineering.ipynb  main.ipynb  main.py  models.ipynb  pkgx.yaml  project.ipynb  pyproject.toml  rf_spam_classifier.joblib  test_models.py
.github/workflows/: ci.yml
api/: bq.py  json_cleaner.py  main.py
dashboard/: dashboard.py  dashboard_v2.py
data/: get_spam.py  load.py
data/sql/: main.sql  meta.sql  training.sql
feature_engineering/: dependency_offline.py  description_offline.py  handle_null.py  helper.py  legit_mask.py  load.py  load_data.py  maintainer_offline.py  name_based_offline.py  pipeline.py  remove_redundant.py  save_json.py  settings.py  time_offline.py
mcp_server/: server.py
models/: dtc_spam_classifier.joblib  ensemble.joblib  fitted_preprocessor.joblib  fitted_scaler.joblib  log_reg_spam_classifier.joblib  svm_linear_spam_classifier.joblib
sql/: mid_downloads.sql  one_package.sql  releases.sql  urls.sql
sql/labeling/: legit_niche.sql  spam_name_lengths.sql
tests/: test_api.py  test_dependency_offline.py  test_description_offline.py  test_handle_null.py  test_legit_mask.py  test_maintainer_offline.py  test_models.py  test_name_based_offline.py  test_raw.jsonl  test_remove_redundant.py  test_time_offline.py  test_training_config.py  test_training_pipeline.py  test_training_train.py
tests/test_data/: test_one_bq_pkg.json  test_pipeline.jsonl
training/: README.md  __init__.py  config.py  ensemble_model.py  models.ipynb  pipeline.py  train.py
