[project]
name = "pyspam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "pandas==2.3.3",
    "scikit-learn==1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.1",
]

[project.optional-dependencies]
api = [
    "db-dtypes>=1.4.4",
    "fastapi>=0.124.0",
    "google-cloud-bigquery>=3.38.0",
    "joblib>=1.5.2",
]

[tool.setuptools]
packages = [
    "feature_engineering",
    "training",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
python_files = ["test_*.py", "*_test.py"]
