[project]
name = "pyspam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "pandas==2.3.3",
    "plotly>=6.5.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "scikit-learn==1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
api = [
    "db-dtypes>=1.4.4",
    "fastapi>=0.124.0",
    "google-cloud-bigquery>=3.38.0",
    "joblib>=1.5.2",
    "uvicorn>=0.38.0",
]
mcp = [
    "httpx>=0.28.1",
    "mcp>=1.24.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "coveralls>=4.0.2",
    "formdt>=0.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[tool.setuptools]
packages = [
    "feature_engineering",
    "training",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q", "--cov", "--cov-report=term-missing"]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = [
    "api",
    "feature_engineering",
    "spam",
    "training"
]
omit = [
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true
